--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,5 @@
+#beego配置
 appname = beegoblog
-adminName = admin
-adminPass = admin
-
 runmode = dev
 [dev]
 httpport = 8080
@@ -11,3 +9,13 @@ httpport = 8088
 httpport = 8888
 
 
+
+#admin用户配置
+adminName = admin
+adminPass = admin
+
+#redis密码
+requirepass = 123
+
+#数据库选择
+database = redis
