尝试用Redis做关系数据库的工作//Id和Guid冲突,时间格式处理

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,6 +1,10 @@
-#beego配置
 appname = beegoblog
+adminName = admin
+adminPass = admin
+requirepass = 123
+database = _redis
 runmode = dev
+
 [dev]
 httpport = 8080
 [prod]
@@ -10,12 +14,7 @@ httpport = 8888
 
 
 
-#admin用户配置
-adminName = admin
-adminPass = admin
 
-#redis密码
-requirepass = 123
 
-#数据库选择
-database = redis
+
+
