--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,8 +1,6 @@
 appname = beegoblog
 adminName = admin
 adminPass = admin
-requirepass = 123
-database = 
 runmode = dev
 
 [dev]
@@ -13,7 +11,8 @@ httpport = 8088
 httpport = 8888
 
 
-
+database = redis
+requirepass = 123
 
 
 
