Bug基本清理掉

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,7 +2,7 @@ appname = beegoblog
 adminName = admin
 adminPass = admin
 runmode = dev
-database = redis
+database = _redis
 requirepass = 123
 
 [dev]
