--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
+
+install:
+  - go get github.com/astaxie/beego
+  - go get github.com/Unknwon/com
+  - go get github.com/mattn/go-sqlite3
+  - go get github.com/garyburd/redigo/redis 
+  
+  
+
 language: go
+
 go:
   - 1.5.1
   - tip
